--- a/Examen Progreso 3 - 202520 - PCRIOLLO/ExamenProgreso3PCRIOLLO.csproj
+++ b/Examen Progreso 3 - 202520 - PCRIOLLO/ExamenProgreso3PCRIOLLO.csproj
@@ -65,4 +65,13 @@
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="Views\BuscarPaginaWebPC.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\MostrarPeliculasViewPC.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
